[package]
name = "exchange-rate"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]
edition = "2018"

[dependencies]
petgraph = "0.4.13"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.8.0"
rust_decimal = "0.11.1"
num-traits = "0.2.6"

[dev-dependencies]
matches = "0.1.8"
